--- a/RebarsToExcelLibrary/RebarsToExcel.csproj
+++ b/RebarsToExcelLibrary/RebarsToExcel.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Aspose.Cells, Version=23.4.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
+      <HintPath>..\packages\Aspose.Cells.23.4.0\lib\net40\Aspose.Cells.dll</HintPath>
+    </Reference>
     <Reference Include="AtomStyleLibrary">
       <HintPath>P:\03_БИБЛИОТЕКА\Revit_5_ПСМ\Скрипты C#\Библиотеки\AtomStyleLibrary\AtomStyleLibrary.dll</HintPath>
     </Reference>
@@ -41,6 +44,9 @@
     </Reference>
     <Reference Include="Microsoft.Xaml.Behaviors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Xaml.Behaviors.Wpf.1.1.31\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
+    </Reference>
+    <Reference Include="office, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -76,12 +82,17 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Abstractions\RebarAbstraction.cs" />
     <Compile Include="Models\Bars\Bar.cs" />
     <Compile Include="Models\Bars\BarsData.cs" />
+    <Compile Include="Models\Bars\BarSize.cs" />
+    <Compile Include="Models\Bars\ShapeImagesData.cs" />
+    <Compile Include="Models\Bars\PositionComparer.cs" />
+    <Compile Include="Models\ProjectData.cs" />
     <Compile Include="Models\RebarAssemblies\RebarAssembliesData.cs" />
     <Compile Include="Models\ConstructionType.cs" />
     <Compile Include="Models\RebarElementType.cs" />
-    <Compile Include="Models\FileManager.cs" />
+    <Compile Include="Models\TableManager.cs" />
     <Compile Include="Models\LevelComparer.cs" />
     <Compile Include="Models\RebarAssemblies\Rebar.cs" />
     <Compile Include="Models\RebarLevel.cs" />
@@ -92,6 +103,9 @@
     <Compile Include="Commands\StartCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\DataManageVM.cs" />
+    <Compile Include="Views\TableCreationProgressWindow.xaml.cs">
+      <DependentUpon>TableCreationProgressWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\AnalyzeWindow.xaml.cs">
       <DependentUpon>AnalyzeWindow.xaml</DependentUpon>
     </Compile>
@@ -116,6 +130,10 @@
     <None Include="RebarsToExcel.addin" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Views\TableCreationProgressWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\AnalyzeWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
